--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,20 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+      <!--    <link rel="stylesheet" href="{% static 'css/blog.css' %}">-->
+
+    <title>Swati's Blog</title>
   </head>
 <body>
 
 
-<div class="jumbotron text-center">
-  <h1><a href="/" >Swati's Blog</a> </h1>
+<div class="page-header">
+  <a href="{% url 'post_new' %}" class="top-menu">Add Post</a>
+    <h1><a href="/" >Swati's Blog</a> </h1>
 </div>
 
-<div class="container">
+<div class="content container">
 
     <div class="row">
         <div class="col-md-8">
