--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,9 +5,13 @@
 {% if post.published_date%}
     <p>Published: {{ post.published_date }}</p>
 {%endif%}
+{% if user.is_authenticated %}
 
-            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a> </h2>
-            <p>{{ post.text|truncatewords:5 }}</p>
+            <a href="{% url 'post_edit' pk=post.pk %}" class ="btn btn-default">Edit</a>
+
+{% endif %}
+            <h2>{{ post.title }}</h2>
+            <p>{{ post.text|linebreaksbr }}</p>
 
 {% endblock %}
 
