Login page added

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% for post in posts %}
 
-            <p>Published: {{ post.created_date }}</p>
+            <p>Created: {{ post.created_date }}</p>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a> </h2>
             <p>{{ post.text|truncatewords:5 }}</p>
         {% endfor %}
