--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,7 +18,13 @@
 
 
 <div class="page-header">
+    {% if user.is_authenticated %}
   <a href="{% url 'post_new' %}" class="top-menu">Add Post</a>
+    <a href="{% url 'post_draft_list' %}" class="top-menu">Draft</a>
+    <p class="top-menu" >Hello {{ user.username}}<small>(<a href="{% url 'logout' %}">Logout</a>)</small></p>
+    {% else %}
+    <a href="{% url 'login'%}" class="top-menu" >Login</a>
+    {% endif %}
     <h1><a href="/" >Swati's Blog</a> </h1>
 </div>
 
