--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,10 +4,13 @@
 
 {% if post.published_date%}
     <p>Published: {{ post.published_date }}</p>
+{%else%}
+            <a href="{% url 'post_publish' pk=post.pk %}" class ="btn btn-default">Publish</a>
 {%endif%}
 {% if user.is_authenticated %}
 
             <a href="{% url 'post_edit' pk=post.pk %}" class ="btn btn-default">Edit</a>
+            <a href="{% url 'post_delete' pk=post.pk %}" class ="btn btn-default">Delete</a>
 
 {% endif %}
             <h2>{{ post.title }}</h2>
