--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -16,5 +16,27 @@
             <h2>{{ post.title }}</h2>
             <p>{{ post.text|linebreaksbr }}</p>
 
+<a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
+{% for comment in post.comments.all %}
+{% if user.is_authenticated or comment.approved_comment %}
+    <div class="comment">
+        <div class="date">{{ comment.created_date }}</div>
+        {% if not comment.approved_comment %}
+        <a class="btn btn-default" href="{% url 'comment_delete' pk=comment.pk %}">Remove</a>
+        <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}">Approve</a>
+    {% endif %}
+        <strong>{{ comment.author }}</strong>
+        <p>{{ comment.text|linebreaks}}</p>
+
+    </div>
+{% endif %}
+
+{% empty %}
+<p>No Comments here yet :(</p>
+{% endfor %}
+
 {% endblock %}
+
+
+
 
