--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,9 +2,10 @@
 {% block content %}
 {% for post in posts %}
 
-            <p>Created: {{ post.created_date }}</p>
+            <p>Created: {{ post.published_date }}</p>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a> </h2>
             <p>{{ post.text|truncatewords:5 }}</p>
+            <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{post.approved_comments.count}}</a>
         {% endfor %}
 
 {% endblock %}
